--- a/app/page.module.css
+++ b/app/page.module.css
@@ -76,6 +76,15 @@
     /* background-color: rgba(128,128,128,.1); */
     background: transparent;
     backdrop-filter: blur(10px);
+
+    box-shadow: unset;
+    transition: all 1s ease, border 2s;
+}
+
+.buttonHero:hover{
+    box-shadow: 0px 0px 2rem rgba(100, 100, 100, .1);
+    background: rgba(255, 255, 255, .02);
+    border: 1px solid rgba(255,255,255,.2);
 }
 
 
@@ -83,4 +92,49 @@
 .buttonHero:active{
     /* 20 and 7 center the cursor when hovered */
     cursor: url('../public/KRZCursors/krz-clicked.cur') 20 7, default !important;
+}
+
+
+
+
+.aboutMe{
+    width: 100vw;
+    height: 100svh;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+    font-size: 2rem;
+
+
+    
+}
+
+
+.textCard{
+    display: flex;
+    justify-content: flex-start;
+    background-color: transparent;
+    padding: 2%;
+    grid-column: 1;
+
+    flex-direction: column;
+}
+
+.textCard h1{
+    mix-blend-mode: difference;
+}
+
+
+.imagine{
+    display: flex;
+    width: 100vw;
+    height: fit-content;
+
+    text-align: center;
+    justify-content: center;
+    font-size: 2rem;
 }
