--- a/app/components/background/background.module.css
+++ b/app/components/background/background.module.css
@@ -113,57 +113,29 @@
 .bgImagine{
     background-color: transparent;
     height: 100vh;
-    width: 100vw;
+    width: auto;
     display: grid;
     grid-template: repeat(5, 1fr) / repeat(5, 1fr);
     /* static pulls back from the pos: relative from .gridObject, might need refactoring */
+
+    
 }
 /* .bgimage is being set along with .bgHero */
 
-.imagineSun{
-    grid-row: 3;
-}
-
-.imagineSun {
-    grid-column: 3;
+/* .imagineSun {
+    grid-column: 5;
+    grid-row: 5;
 }
 
 
-.imagineSun::before{
+.imagineSun::after{
     content: "";
     position: absolute;
-    background-color: #fff;
-    width: 10%;
+    background-color: rgba(255, 255, 255, 255);
+    width: 100%;
     aspect-ratio: 1;
     overflow: visible;
     border-radius: 100%;
-    box-shadow: 0px 0px 200px 10px rgba(255, 255, 255, .3);
-    z-index: -5;
-}
-
-.bulb{
-    grid-row: 3;
-    grid-column: 3;
-
-    width: 50%;
-    height: 50%;
-    aspect-ratio: 1;
-
-    filter: drop-shadow(0px 0px 1000px rgba(255, 255, 255, 1));
-    transform: rotate(180deg);
-
-    align-self: center;
-    justify-self: center;
-    
-}
-
-.bulb::after {
-    content: "teste";
-    width: 200%; /* Adjust this value to change the size of the shadow */
-    height: 100%;
-    position: absolute;
-    z-index: -1; /* Ensure the shadow is behind the element */
-    left: -50%; /* Center the shadow behind the element */
-    top: 0;
-    filter: drop-shadow(0px 0px 1000px rgb(255, 0, 0));
-}
+    box-shadow: 0px 0px 200px 20px rgba(255, 255, 255, .2);
+    z-index: 0;
+} */
