--- a/app/page.module.css
+++ b/app/page.module.css
@@ -48,6 +48,7 @@
 
     /* negative text */
     mix-blend-mode: difference;
+    align-items: center;
 
 }
 
@@ -61,6 +62,7 @@
     align-self: center;
 }
 
+
 .buttonHero{
     font-weight: 100;
     justify-self: center;
@@ -73,17 +75,18 @@
 
     padding: 0.6rem 1rem;
 
-    /* background-color: rgba(128,128,128,.1); */
-    background: transparent;
-    backdrop-filter: blur(10px);
+    background-color: transparent; /* Ensure some level of transparency */
 
     box-shadow: unset;
     transition: all 1s ease, border 2s;
+    
+    z-index: 1;
+
 }
 
 .buttonHero:hover{
     box-shadow: 0px 0px 2rem rgba(100, 100, 100, .1);
-    background: rgba(255, 255, 255, .02);
+    background: rgba(255, 255, 255, .05);
     border: 1px solid rgba(255,255,255,.2);
 }
 
@@ -108,9 +111,7 @@
     grid-row-gap: 0px;
 
     font-size: 2rem;
-    
-
-
+    mix-blend-mode: difference;
     
 }
 
@@ -131,11 +132,29 @@
 
 
 .imagine{
-    display: flex;
-    width: 100vw;
-    height: fit-content;
+    margin: 1em;
+    padding: 1em;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr); 
+
+    width: auto;
+    height: 100vh;
 
     text-align: center;
     justify-content: center;
     font-size: 2rem;
+
+    border: 1px solid rgba(100, 100, 100, .1);
+    background-color: rgba(100, 100, 100, .05);
+    border-radius: 20px;
+
+    backdrop-filter: blur(50px);
+}
+
+.imagine h1 {
+    grid-row: 1;
+    grid-column: span 2;
+    mix-blend-mode: difference;
+    z-index: -5;
 }
