--- a/app/page.module.css
+++ b/app/page.module.css
@@ -135,8 +135,8 @@
     margin: 1em;
     padding: 1em;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr); 
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 2fr 2fr; 
 
     width: auto;
     height: 100vh;
@@ -144,17 +144,51 @@
     text-align: center;
     justify-content: center;
     font-size: 2rem;
+    align-items: center;
 
     border: 1px solid rgba(100, 100, 100, .1);
-    background-color: rgba(100, 100, 100, .05);
+    /* background-color: rgba(100, 100, 100, .05); */
     border-radius: 20px;
 
     backdrop-filter: blur(50px);
+
+    background-color: transparent;
+
+    gap: 1rem;
 }
 
 .imagine h1 {
     grid-row: 1;
-    grid-column: span 2;
+    grid-column: span 3;
     mix-blend-mode: difference;
     z-index: -5;
 }
+
+
+.linkImage{
+  
+
+    border: 1px solid rgba(100, 100, 100, .1);
+    background-color: rgba(100, 100, 100, .02);
+    border-radius: 20px;
+
+    text-align: start;
+    height: 100%;
+
+    filter: grayscale(100%) contrast(90%);
+    transition: filter .5s ease;
+}
+
+.linkImage:hover{
+    filter: grayscale(0) contrast(1);
+}
+
+
+.linkText{
+    grid-column: span 2;
+    justify-content: start;
+    text-align: start;
+    height: 100%;
+
+}
+
