--- a/app/page.module.css
+++ b/app/page.module.css
@@ -139,20 +139,20 @@
     grid-template-rows: 1fr 2fr 2fr; 
 
     width: auto;
-    height: 100vh;
+    height: fit-content;
 
     text-align: center;
     justify-content: center;
     font-size: 2rem;
     align-items: center;
 
-    border: 1px solid rgba(100, 100, 100, .1);
-    /* background-color: rgba(100, 100, 100, .05); */
+    border: 1px solid rgba(100, 100, 100, .2);
+    background-color: rgba(100, 100, 100, .06);
     border-radius: 20px;
 
     backdrop-filter: blur(50px);
 
-    background-color: transparent;
+    /* background-color: transparent; */
 
     gap: 1rem;
 }
@@ -166,22 +166,13 @@
 
 
 .linkImage{
-  
-
-    /* border: 1px solid rgba(100, 100, 100, .1); */
-    /* background-color: rgba(100, 100, 100, .02); */
     border-radius: 20px;
 
     text-align: start;
     height: 100%;
 
-    /* filter: grayscale(100%) contrast(90%);
-    transition: filter .5s ease; */
 }
 
-.linkImage:hover{
-    /* filter: grayscale(0) contrast(1); */
-}
 
 
 .linkText{
