--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -25,10 +25,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1em;
 }
 
 .footer a {
     gap: 1em;
+    transition: 0.2s ease;
 }
 
+.footer a:hover{
+    scale: 1.05;
+    transform-origin: center;
+}
